--- a/Frontend/uberfront/package.json
+++ b/Frontend/uberfront/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-toggle": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.2.7",
