--- a/Frontend/uberfront/package.json
+++ b/Frontend/uberfront/package.json
@@ -19,6 +19,7 @@
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-bootstrap-toggle": "^2.3.2",
+    "react-data-bouncer": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.2.7",
