--- a/Frontend/uberfront/package.json
+++ b/Frontend/uberfront/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
