--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "mocha"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
+    "chain": "^0.1.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -17,7 +20,11 @@
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mocha": "^9.1.2",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4"
   }
 }
