--- a/Frontend/uberfront/package.json
+++ b/Frontend/uberfront/package.json
@@ -15,6 +15,9 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.0",
+    "chai": "^4.3.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-aws-s3": "^1.5.0",
@@ -28,9 +31,11 @@
     "react-image-gallery": "^1.2.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "@testing-library/react": "^11.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,7 +61,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@testing-library/react": "^11.2.7"
-  }
+  "devDependencies": {}
 }
