--- a/Frontend/uberfront/package.json
+++ b/Frontend/uberfront/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -33,9 +34,9 @@
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9",
-    "@testing-library/react": "^11.2.7"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
