--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "kafka-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "mocha"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "kafka-node": "^5.0.0",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
     "chain": "^0.1.3",
@@ -20,13 +24,9 @@
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "kafka-node": "^5.0.0",
     "mocha": "^9.1.2",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12"
-  },
-  "devDependencies": {
-    "chai": "^4.3.4"
   }
 }
