--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,7 +24,9 @@
     "mocha": "^9.1.2",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.4"
