--- a/Frontend/uberfront/package.json
+++ b/Frontend/uberfront/package.json
@@ -21,6 +21,9 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.9",
+    "jwt-decode": "^2.2.0",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "react": "^17.0.2",
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^2.0.0-beta.6",
