--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "kafka-node": "^5.0.0",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
     "chain": "^0.1.3",
@@ -24,9 +23,12 @@
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "kafka-node": "^5.0.0",
     "mocha": "^9.1.2",
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0"
   }
 }
