--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,7 +26,12 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
     "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "apollo-server": "3.5.0",
+    "dayjs": "^1.10.4",
+    "graphql": "^16.0.1",
+    "password-hash": "^1.2.2",
+    "express-graphql": "^0.12.0"
   },
   "devDependencies": {
     "chai": "^4.3.4"
